# ai_cyber_pratical_classes

./: .gitignore  .gitlab-ci.yml
doc/: main.py  mkdocs.yml  pyproject.toml
doc/docs/: .nav.yml  01-env_setup.md  02-first_notebook.md  03-submitting.md  index.md
doc/docs/04-project/: .nav.yml  01-introduction.md  02-getting_started.md  03-implementing_test.md  04-implementing_accuracy.md  05-implementing_metric.md
src/01_environment_setup/: 01_environment_setup.ipynb  main.py  pyproject.toml
src/02_adversarial_attacks/: 02_adversarial_attacks.ipynb
src/03_textattack/: 03_textattack.ipynb  pyproject.toml
src/04_tabular_attacks/: 04_tabular_attacks.ipynb  README.md  main.py  pyproject.toml
src/05_poisoning/: 05_poisoning.ipynb  README.md  pyproject-macos-intel.toml  pyproject.toml
src/06_cyberus/: .gitignore  Cybererus_medicalAI_security  Cybererus_medicalAI_security.ipynb  Epochs 6-16.txt  attack_results.pkl  main.py  pyproject.toml  train_history.pkl
src/07_malware/: Practical - 07_malware_attacks.ipynb  main.py  pyproject.toml
src/07_malware/data/: dataset-X.json  dataset-Y.json  dataset-meta.json
src/07_xai/: xai.ipynb
src/08_anomaly/: Anomaly_detection_drift.ipynb  main.py  pyproject.toml
src/09/: apresentacao.pdf.pptx  notebook_jailbreaking_v3_student.ipynb
src/0x_xai/: pyproject.toml  xai.ipynb
