[project]
name = "04-tabular-attacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy~=1.24.0",
    "scikit-learn>=1.7.2",
    "serval-ml-commons==0.1.4",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "adversarial-robustness-toolbox==1.20.1",
]
